# IC_FIles

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  junk.txt  package-lock.json  package-set.dhall  package.json  webpack.config.js
src/ic_files/: Cargo.toml  can.did
src/ic_files/src/: lib.rs
src/ic_files_backend/: main.mo
src/ic_files_backend/Encrypt/: lib.mo  types.mo
src/ic_files_backend/Files/: lib.mo  types.mo
src/ic_files_backend/Users/: lib.mo  types.mo
src/ic_files_frontend/assets/: main.css
src/ic_files_frontend/src/: app.jsx  index.css  index.html  index.js  index.jsx
src/ic_files_frontend/src/components/: Data.jsx  Sidebar.jsx  header.js  header.jsx
src/ic_files_frontend/src/components/dashbord/: Side.jsx  SideBar.jsx
wasm/: file.txt  ic_files_backend.did  ic_files_backend.wasm
